feat: add more tests
Add shouldThrowIfAtLeastOneEditionNotSpecified and shouldThrowIfBookAlreadyExists tests